blackboard_ws/log/build_2021-11-23_15-14-49/blackboard/stdout_stderr.log
running egg_info
writing ../../build/blackboard/blackboard.egg-info/PKG-INFO
writing dependency_links to ../../build/blackboard/blackboard.egg-info/dependency_links.txt
writing entry points to ../../build/blackboard/blackboard.egg-info/entry_points.txt
writing requirements to ../../build/blackboard/blackboard.egg-info/requires.txt
writing top-level names to ../../build/blackboard/blackboard.egg-info/top_level.txt
reading manifest file '../../build/blackboard/blackboard.egg-info/SOURCES.txt'
writing manifest file '../../build/blackboard/blackboard.egg-info/SOURCES.txt'
running build
running build_py
copying blackboard/Robot.py -> /home/mpcmeulensteen/blackboard_ws/build/blackboard/build/lib/blackboard
copying blackboard/Blackboard.py -> /home/mpcmeulensteen/blackboard_ws/build/blackboard/build/lib/blackboard
running install
running install_lib
copying /home/mpcmeulensteen/blackboard_ws/build/blackboard/build/lib/blackboard/Robot.py -> /home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard
copying /home/mpcmeulensteen/blackboard_ws/build/blackboard/build/lib/blackboard/Blackboard.py -> /home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard/Robot.py to Robot.cpython-38.pyc
  File "/home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard/Robot.py", line 193
    if energyAtTask =! 0:
                    ^
SyntaxError: invalid syntax

byte-compiling /home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard/Blackboard.py to Blackboard.cpython-38.pyc
running install_data
running install_egg_info
removing '/home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/blackboard/blackboard.egg-info to /home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/mpcmeulensteen/blackboard_ws/build/blackboard/install.log'
